👌 IMPROVE: Develop: Enhance application stability, UI/UX, and update documentation (#1)
* 👌 IMPROVE: Stabilized application start and added neo db connection

* 👌 IMPROVE: Removed .idea unnecessary dir

* 👌 IMPROVE: Cleaned and formatted board component file

* 👌 IMPROVE: Modified backend and frontend UI/UX functionalities

Added time remainders and fixed login issue

* 👌 IMPROVE: Added backend README file

* 👌 IMPROVE: Modified frontend README file

* 👌 IMPROVE: Modified root README file